preface/reading guide

--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -1,5 +1,5 @@
 \chapter*{Preface}
-This project has been constructed as part of the fourth semester project the by project group SW510E16 from Aalborg University, Software Engineering, from the period 2nd September to 21st December 2016 . \newline
+This report is part of the fifth semester project made by project group SW510E16 at Aalborg University, Software Engineering starting from the 2nd of September to the 21st of December 2016. \newline
 The project is based on the \textit{Aalborg-model} study method, where problem and project based learning is the focus. The theme of this semester is to make an embedded system with real-time constraints. The project group chose to make a trash bin that should be able to catch the trash thrown at it. \newline
 
 Thank the people who should be thanked for helping making the project, here. 
@@ -28,17 +28,16 @@ Thank the people who should be thanked for helping making the project, here.
 \end{table}
 
 \chapter*{Reading guide}
-The sources in the report are being referred to by the Harvard citation method. This includes a last name and a publication year in the report, and in the \textit{\textbf{Bibliography}} chapter all the used sources are listed in alphabetical order. \newline
-\textit{An example of a source in the text could be: \textbf{\citep{Servo}}.}
-\newline
-If the source is on the left side of a dot, then that source refers only to that sentence and if the source is on the right side of a dot, then it refers to the whole section. 
+Throughout the report sources are referred to by the Harvard citation method. When a source is listed in the report, the last name of the author and a publication year is listed. The sources are all listed alphabetically in  the \textit{\textbf{Bibliography}} section. \newline
+\textit{This is an example of a source listed in the report: \textbf{\citep{kw}}.} \newline
+The source may refer to either the whole section or to only that sentence. The way this differs depends on the placement of the dot. If the dot is after the source, then that source refers to the sentence and if the dot is before the source, then the source refers to the whole section. 
 
-Figures and tables are referred to as a number. The number is determined by the chapter and the number of figure it appears as. \newline
-\textit{For example: The first figure in a chapter will have the number \textbf{x.1}, where x is the number of the chapter. The next figure, will have the number \textbf{x.2}, etc.}
-\newline
-The listings of source code are also referred to as the tables and figures. 
 
-Source code in the report are listed as code snippets, and they're not necessarily the same as the source code, meaning that code snippets may be shorter than the actual source code or missing comments from the source code. In order to show that, the use of the following three dots are used: \textit\textbf{{"..."}}, which means that some of the source code isn't listed in the code snippet, as it may be long and irrelevant. 
+When referring to figures, tables and source code, numbers are used. Depending on which chapter and number of figure/table it is, the number is defined. \newline
+\textit{This example can be used: In chapter X we want to refer to the second figure. This is done by giving the figure number \textbf{X.2}, where X is the number of the chapter we're referring from.}
+\newline
+
+When referring to source code, we're using code snippets. These code snippets aren't necessarily the full source code, but may be shorter version of it and/or missing comments. When code has been removed in the snippets, the use of three dots are used:  \textit\textbf{{"..."}}, these dots show that some code altering has been made in the snippet, whether it's because it's long and irrelevant for understanding the purpose of the code, or because we're simply just trying to explain those few lines. 
 
 Throughout the report requirements are split into four colours with four different meanings. The colour blue refers to new requirements or focus requirements for that specific increment. The colour green refers to a requirement being fulfilled. Orange means that the requirement is fulfilled but has been changed. Red means that the requirement has been changed, but not yet fulfilled. 
 
