--- a/Rapport/preamble_ida15.tex
+++ b/Rapport/preamble_ida15.tex
@@ -39,6 +39,9 @@
 %\usepackage{xr}							% Referencer til eksternt dokument med \externaldocument{<NAVN>}
 %\usepackage{glossaries}					% Terminologi- eller symbolliste (se mere i Daleifs Latex-bog)
 
+% Quotation %
+\usepackage{csquotes}
+
 % ¤¤ Misc. ¤¤ %
 \usepackage{listings}						% Placer kildekode i dokumentet med \begin{lstlisting}...\end{lstlisting}
 \usepackage{lipsum}							% Dummy text \lipsum[..]
@@ -235,6 +238,8 @@ ntheorem]{defi}{Definition}[section]
 			\caption{#3}\label{#4}
 		\end{figure} 
 }
+
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 
 % ¤¤ Specielle tegn ¤¤ %
 \newcommand{\decC}{^{\circ}\text{C}}
