--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -98,3 +98,17 @@
 	title ={WifiGuide}	
 }
 
+@book{rtsbook,
+	title = {Real-Time Embedded Systems},
+	author = {Ivan Cibrario Bertolotti and Gabriele Manduchi},
+	year = {2012},
+	number = {ISBN: 9781439841549},
+	series = {Paperback},
+	publisher = {CRC Press}
+}
+
+@misc{safeinterrupt,
+	author ={John Regehr},
+	title ={Safe and Structured Use of Interrupts in Real-Time and Embedded Software}
+	year = {2006}	
+}
