--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -57,3 +57,15 @@ The process includes emphasis on a small group of individuals with tasks usually
 \label{pm}
 \end{figure}
 
+\chapter*{Toolchain}
+The following tools has been used to create the report and the product of the project. Every tool in the toolchain has a description stating the benefits and use of the tool.
+
+\begin{itemize}
+	\item GitHub
+	\item LaTeX Studio
+	\item Visual Studio C\#
+	\item Arduino IDE 1.0.3
+	\item BoundT
+\end{itemize}
+
+\section{Use of tools}
