--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -76,6 +76,7 @@ If the robot has read a coordinate and started to move towards it, receiving a n
 \section{Connecting Arduino and Kinect}
 \label{sec:Connecting Arduino and Kinect}
 %Kan indeholde hvordan vi har tænkt os at de skal kunne snakke sammen og hvilket data der skal blive sendt i mellem dem.
+The Kinect is used as a sensor in this project, which will send coordinates to the Arduino, stating where the tracked object will land. The coordinate should be transformed to the corresponding coordinate in the predefined area by the Arduino, as the Kinect generates coordinates according to the distance from the camera, not the distance from the Arduino. The Kinect does not know the position of the robot, as the Kinect is only perceived as a sensor.
 For convenience, and as a part of the requirements for this project, the Arduino should receive wireless data from a computer, connected to the Kinect. The Arduino Wifi Shield makes this possible, with the Wifi library included in the Arduino IDE. \newline
 The connection between the Arduino and the computer should be through a local router, with a set SSID and password. The computer should use the Kinect to calculate an impact point of the object, and send this in a specific format, so that the data can be easily read and translated to a set of coordinates for the robots movement. The computer should be able to send coordinates more than once, since the first impact point is not necessarily be precise enough to catch the object. The computer should calculate increasingly accurate impact points, which should be sent with a certain minimal inter-arrival time, to not hinder the robots movement, and yet still in time for the robot to correct itself. \newline
 The Arduino should receive this data and read whenever it has sufficient time to do so, and convert the data received to match the right coordinate in the predefined area. 
