process model + intro
!?!?

--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -83,7 +83,7 @@ The Arduino should receive this data and read whenever it has sufficient time to
 \section{Scheduling}
 \label{sec:Scheduling}
 %Snakke om de forskellige tasks, deres deadlines og hvliken metode vi vil bruge til at schedule?
-
+In this section, the different scheduling methods are discussed, which will lead to the choice of which method the group uses for the scheduling analysis in this project. 
 
 \subsection{Cyclic Executive}
 \label{sec:Cyclic Executive}
