--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -35,6 +35,13 @@
 	year = {2006}
 }
 
+@article{safe,
+	author = {John Regehr},
+	title = {Safe and Structured Use of Interrupts in Real-Time and
+	Embedded Software},
+	year = {2006}
+}
+
 @manual{es,
 	author = {Techopedia.com},
 	address = {\url{https://www.techopedia.com/definition/3636/embedded-system}},
