--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -62,10 +62,15 @@ The following tools has been used to create the report and the product of the pr
 
 \begin{itemize}
 	\item GitHub
-	\item LaTeX Studio
+	\item TeX Studio
 	\item Visual Studio C\#
 	\item Arduino IDE 1.0.3
 	\item BoundT
 \end{itemize}
 
 \section{Use of tools}
+GitHub is used with the intention of merging and sharing documents. This tool is also used here to verify each version of the documentation and code, to ensure that everyone has the latest update of the project.
+TeX Studio is used as a writing environment, as this after some experience has proven to be a great tool for creating a report. This tool in concoction with GitHub makes it possible to work on the project in pairs or alone, with little merging conflicts.
+Visual Studio C\# is used in this project to create the C\# code for the Kinect.
+Arduino IDE 1.0.3 is used in this project to code the Arduino. Any later IDE is not suitable for this project, which will be explained in the report.
+BoundT is used to calculate the bounds of the code, which will be used in a WCET-analysis.
