--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -62,6 +62,14 @@
 	note = {Accessed: 17-10-2016}
 }
 
+@manual{AVRFIX, 
+	author = {Maximilian Rosenblattl and Andreas Wolf},
+	address = {\url{https://github.com/duckythescientist/avrfix}},
+	title = {AVRFIX},
+	note = {Accessed: 08-12-2016}
+}
+
+
 @manual{ams,
 	author = {Arduino.cc},
 	address = {\url{https://www.arduino.cc/en/Main/ArduinoMotorShieldR3}},
