Inclusion of citations

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -112,3 +112,13 @@
 	title ={WifiGuide}	
 }
 
+@book{rtsbog,
+	title = {Real-Time Embedded Systems: Open-Source Operating systems Perspective},
+	author = {Ivan Cibrario Bertolotti and Gabriele Manduchi},
+	year = {2012},
+	number = {ISBN: 9781439841549},
+	series = {ebook},
+	publisher = {CRC Press 2012}
+}
+
+
