Jeg har noget mindre hvis du har brug for det, "wink wink"

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -118,6 +118,7 @@
 	year = {2012},
 	number = {ISBN: 9781439841549},
 	series = {ebook},
+	pages = {s. 269-272},
 	publisher = {CRC Press 2012}
 }
 
