--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -65,6 +65,12 @@ The program have a setup and will loop the behavior of the robot. First the setu
 	\end{itemize}
 \end{itemize}
  
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{billeder/flowgraph.png}
+	\caption{The flowgraph of the program}
+	\label{figure:flowgraph}
+\end{figure}
 
 \section{Robot positioning and movement}
 \label{sec:Robot positioning and movement}
